# reconfix

./: .editorconfig  .eslintrc.yml  .gitignore  .markdownlint.json  .npmignore  .resinci.yml  .travis-ci.yml  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  all_tests.txt  appveyor.yml  build.rs  circle.yml  generate-sys.sh  goexport  package-lock.json  package.json  repo.yml  rustfmt.toml
.versionbot/: CHANGELOG.yml
bindings/node/: .gitignore  README.md  package.json
bindings/node/lib/: index.js
bindings/node/native/: Cargo.toml
bindings/node/native/src/: buffer.rs  json.rs  lib.rs  task.rs
ci/: build-wasm.sh  deploy.sh  install.sh  test.sh
cuelang/: Cargo.toml
cuelang-sys/: Cargo.toml  build.rs
cuelang-sys/c/: ffi.go
cuelang-sys/src/: lib.rs
cuelang-sys/wasm/: ffi.go
cuelang/src/: ast.rs  lib.rs  test.rs
docs/: architecture.md  contributing.md  cue.md  dev-notes.md  json-schema.md  metaschema.json  rust.md  schema.markdown  schema.md  style.md  transformations.markdown  transformations.md
examples/: resin-cli.rs
examples/browser/: index.html  index.js  package.json
examples/node/: index.js  package.json
lib/: configuration.js  connector.js  domain.js  index.js  mapping.js  properties.js  state.js  template.js  test-utils.js  type.js
lib/connectors/: json.js
lib/connectors/formats/: json.js
lib/engine/: configuration.js  filesystem.js
lib/engine/formats/: index.js  ini.js
lib/engine/jsontemplate/: README.markdown  expression.js  index.js  interpolation.js
lib/jsontemplate/: README.markdown  index.js  interpolation.js  regexes.js  string.js
lib/visuals/: cli.js
lib/visuals/cli/: index.js
lib/visuals/cli/integrations/: inquirer.js
node/tests/: README.md  package.json
node/tests/src/: require.test.js
node/tests/src/jelly-schema/: constructor.test.js  errors.test.js  jsonAndUiSchema.test.js  validate.test.js
node/tests/src/temen/: evaluate.test.js
reconfix/: Cargo.toml
reconfix-cli/: Cargo.toml
reconfix-cli/src/: main.rs
reconfix/src/: external_data.rs  lib.rs  wasm.rs
reconfix/src/lens/: mod.rs  test.rs
reconfix/src/orchestrator/: mod.rs  test.rs
reconfix/tests/: orchestration.rs
scripts/: build-wasm.sh
src/: common.rs  error.rs  json.rs  lib.rs  schema.rs  schema.rs.old  template.rs  test.rs  transform.rs
src/adaptor/: ini.rs  mod.rs
src/io/: host.rs  mod.rs
src/map/: default.rs  mod.rs  types.rs
src/schema/: enum.rs  mod.rs  parse.rs  property.rs  type.rs  types.rs  unique_items.rs  version.rs
src/schema/mapping/: filename.rs  mod.rs  target.rs
src/transform/: generator.rs  mod.rs  types.rs
src/types/: mod.rs
src/types/mapping/: map.rs  mod.rs  target.rs
src/utils/: deref.rs  mod.rs  value.rs
src/validator/: error.rs  mod.rs  path.rs  scope.rs  state.rs
src/validator/types/: array.rs  boolean.rs  chrony.rs  datetime.rs  dnsmasq.rs  email.rs  file.rs  hostname.rs  ip.rs  iptables.rs  mod.rs  number.rs  object.rs  password.rs  port.rs  regex.rs  string.rs  stringlist.rs  text.rs  uri.rs
src/wasm/: eval.rs  mod.rs  temen.rs
tests/: configuration.spec.js  connector.spec.js  domain.spec.js  errors_test_template  mapping.spec.js  properties.spec.js  state.spec.js  template.spec.js  tests.rs  type.spec.js  validator_test_template
tests/data/error/data-path/: array-index.yaml  nested-array-index.yaml  nested-objects-property.yaml  root-property.yaml
tests/data/error/keyword/: enum_.yaml
tests/data/error/schema-path/: array-index.yaml  nested-array-index.yaml  nested-objects-property.yaml  root-property.yaml
tests/data/errors/: missing-root-property.yaml
tests/data/errors/keywords/: const_.yaml
tests/data/validator/array/: input-boolean.yaml  input-float.yaml  input-integer.yaml  input-null.yaml  items-mixed-types.yaml  items-single-schema-in-array.yaml  items-strings-with-different-patterns.yaml  length-gte-min-items.yaml  length-lt-min-items.yaml  length-lte-max-items.yaml
tests/data/validator/boolean/: enum-matches.yaml  input-float.yaml  input-object.yaml
tests/data/validator/datetime/: input-array.yaml  input-boolean.yaml  input-integer.yaml  input-null.yaml  (+1 more)
tests/e2e/json/: const_map.json  const_value.json  identity_map.json  object_const_map.json  stringify_map.json  template_map.json  wifi_disable.json  wifi_enable.json
tests/engine/configuration/: bidirectional.spec.js  unmatch.spec.js
tests/engine/filesystem/: generate-files-manifest.spec.js  image.spec.js  manifest.spec.js
tests/engine/formats/: _utils.js  index.spec.js  utils.js
tests/engine/jsontemplate/: expression.spec.js  index.spec.js  interpolation.spec.js
tests/integration/: read.spec.js  write.spec.js
tests/jsontemplate/: bidirectional.spec.js  index.spec.js  interpolation.spec.js  matches.spec.js
tests/jsontemplate/string/: bidirectional.spec.js  deinterpolate.spec.js  interpolate.spec.js
tests/testdata/config/: bidi_1  bidi_2  bidi_3  bidi_4  bidi_5  bidi_6  extract_1  extract_2  extract_3
tests/testdata/mapping/: bidi_1  bidi_2  bidi_3  bidi_4  bidi_5  bidi_6  bidi_7  gtv_1  gtv_2  gtv_3  map_1  map_2  map_3  relationship_1  relationship_2  relationship_3  relationship_4  unmap_1  unmap_2  unmap_3  unmap_4  unmap_5  unmap_6  unmap_7
tests/testdata/schemas/: constant.json  multi_type.json  reconfix.json  reconfix_target_disk.json  reconfix_target_nested.json  reconfix_target_network_manager.json  reference.json
tests/testdata/template/: matches_1  matches_10  matches_11  matches_12  matches_13  matches_14  matches_15  matches_16  matches_2  matches_3  matches_4  matches_5  matches_6  matches_7  matches_8  matches_9
tests/visuals/cli/: flatten.spec.js  transpile-question-when.spec.js  transpile-question.spec.js
visuals/: cli.js
(+254 files in other folders)
