[package]
name = "reconfix"
version = "0.0.1"
authors = ["Robert Vojta <robert@balena.io>"]
edition = "2018"
maintenance = { status = "actively-developed" }
license = "Apache-2.0"
repository = "https://github.com/balena-io/reconfix/"
description = "(Re)Configuration toolkit"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[badges]
travis-ci = { repository = "balena-io/reconfix", branch = "master" }

[target.wasm32-unknown-unknown.dependencies.console_error_panic_hook]
version = "0.1"

[target.wasm32-unknown-unknown.dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[target.wasm32-unknown-unknown.dev-dependencies.wasm-bindgen-test]
version = "0.2"
