[package]
name = "reconfix"
version = "0.3.0"
authors = ["Robert Vojta <robert@balena.io>"]
edition = "2018"
maintenance = { status = "actively-developed" }
license = "Apache-2.0"
repository = "https://github.com/balena-io/reconfix/"
description = "(Re)Configuration toolkit"
readme = "README.md"
publish = false
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]

[badges]
travis-ci = { repository = "balena-io/reconfix", branch = "master" }

[dependencies.balena-temen]
version = "0"

[dependencies.base64]
version = "0"

[dependencies.chrono]
version = "0"

[dependencies.lazy_static]
version = "1"

[dependencies.regex]
version = "1"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.serde_yaml]
version = "0.8"

[dependencies.uuid]
version = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies.console_error_panic_hook]
version = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.wasm-bindgen-test]
version = "0.2"
