[package]
name = "reconfix"
version = "0.3.0"
authors = ["Robert Vojta <robert@balena.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/balena-io/reconfix/"
description = "(Re)Configuration toolkit"
readme = "README.md"
publish = false
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]
