[package]
name = "cuelang-sys"
version = "0.1.0"
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.86"
mbox = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.47"
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = "0.2.70"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
bindgen = "0.57.0"
