[package]
name = "cuelang"
version = "0.1.0"

authors = ["Carol Schulze <carol@balena.io>"]
description = "Rusty bindings to cuelang"

edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cuelang-sys = { path = "../cuelang-sys" }

lazy_static = "1.4.0"
serde = "1.0.123"
serde_json = "1.0.62"
thiserror = "1.0.24"
