[package]
name = "reconfix-cli"
version = "0.1.0"

authors = ["Carol Schulze <carol@balena.io>"]
repository = "https://github.com/balena-io/reconfix/"
description = "CLI for the (Re)Configuration toolkit"

edition = "2018"
publish = false

[dependencies]
reconfix = { path = "../reconfix" }

anyhow = "1.0.38"
async-trait = "0.1.42"
clap = "2.33.3"
ex = "0.1.3"
json-patch = "0.2.6"
notify = "4.0.15"
serde = "1.0.123"
serde_json = "1.0.62"
tokio = { version = "1.2.0", default-features = false, features = ["rt-multi-thread", "fs"] }
version = "3.0.0"
