[package]
name = "reconfix"
version = "0.1.0"

authors = ["Carol Schulze <carol@balena.io>"]
repository = "https://github.com/balena-io/reconfix/"
description = "(Re)Configuration toolkit"

edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cuelang = { path = "../cuelang" }

anyhow = "1.0.38"
async-trait = "0.1.42"
futures = { version = "0.3.13", default-features = false, features = ["alloc"] }
lazy_static = "1.4.0"
maplit = "1.0.2"
petgraph = { version = "0.5.1", default-features = false }
serde = "1.0.123"
serde_json = "1.0.62"
thiserror = "1.0.24"
tokio = { version = "1.2.0", default-features = false, features = ["sync"] }
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.47"
wasm-bindgen-futures = "0.4.20"

[dev-dependencies]
tokio = { version = "1.2.0", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }
