[package]
name = "node-reconfix"
version = "0.5.0"
authors = ["Aaron Brodersen <aaron@resin.io>"]
license = "Apache-2.0"
build = "build.rs"

[workspace]

[lib]
name = "node_reconfix"
crate-type = ["dylib"]

[build-dependencies]
neon-build = { git = "https://github.com/resin-io-modules/neon.git", branch = "fork" }

[dependencies]
neon = { git = "https://github.com/resin-io-modules/neon.git", branch = "fork" }
log = "0.3"
env_logger = "0.4"
serde_json = "1.0"
futures = "0.1"

[dependencies.reconfix]
path = "../../.."
version = "*"
